{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 40,
  "lineage": "8a80e937-81b2-47bd-511d-815305594156",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767397692701:internet-gateway/igw-0a272f66cc757c18d",
            "id": "igw-0a272f66cc757c18d",
            "owner_id": "767397692701",
            "tags": {
              "Name": "Web"
            },
            "tags_all": {
              "Name": "Web"
            },
            "vpc_id": "vpc-07702cb90382113ef"
          },
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a272f66cc757c18d",
            "id": "r-rtb-053c3ce62468e07bc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-053c3ce62468e07bc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web-gw",
            "aws_route_table.web",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767397692701:route-table/rtb-053c3ce62468e07bc",
            "id": "rtb-053c3ce62468e07bc",
            "owner_id": "767397692701",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "web-route"
            },
            "tags_all": {
              "Name": "web-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-07702cb90382113ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e8becd22e838a74",
            "route_table_id": "rtb-053c3ce62468e07bc",
            "subnet_id": "subnet-005dbcb73792419e0"
          },
          "dependencies": [
            "aws_route_table.web",
            "aws_subnet.web",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767397692701:security-group/sg-062fe873cc7f12a66",
            "description": "allow ssh from home and work",
            "egress": [],
            "id": "sg-062fe873cc7f12a66",
            "ingress": [],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "767397692701",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web"
            },
            "tags_all": {
              "Name": "Web"
            },
            "timeouts": null,
            "vpc_id": "vpc-07702cb90382113ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767397692701:subnet/subnet-005dbcb73792419e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005dbcb73792419e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767397692701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web"
            },
            "tags_all": {
              "Name": "Web"
            },
            "vpc_id": "vpc-07702cb90382113ef"
          },
          "dependencies": [
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767397692701:vpc/vpc-07702cb90382113ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c2ab6494c571387d",
            "default_route_table_id": "rtb-06cd39e8d511496ff",
            "default_security_group_id": "sg-0e9cb5707f8a2a6bf",
            "dhcp_options_id": "dopt-0fa2a1e6c50f94007",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07702cb90382113ef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06cd39e8d511496ff",
            "owner_id": "767397692701",
            "tags": {
              "Name": "project_vpc",
              "Project": "lab_week_11"
            },
            "tags_all": {
              "Name": "project_vpc",
              "Project": "lab_week_11"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "web-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767397692701:security-group-rule/sgr-0efce563d749710a1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0efce563d749710a1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-062fe873cc7f12a66",
            "security_group_rule_id": "sgr-0efce563d749710a1",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767397692701:security-group-rule/sgr-071b35cb8ed10473c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-071b35cb8ed10473c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-062fe873cc7f12a66",
            "security_group_rule_id": "sgr-071b35cb8ed10473c",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767397692701:security-group-rule/sgr-05fb1b773223bcb34",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-05fb1b773223bcb34",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-062fe873cc7f12a66",
            "security_group_rule_id": "sgr-05fb1b773223bcb34",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.web"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-075686beab831bb7f",
            "arn": "arn:aws:ec2:us-west-2:767397692701:instance/i-03a516e5d5fd507a2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03a516e5d5fd507a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-4640",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09047619c8838be1d",
            "private_dns": "ip-10-0-1-50.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-52-34-220-1.us-west-2.compute.amazonaws.com",
            "public_ip": "52.34.220.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f64e401493225f64",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005dbcb73792419e0",
            "tags": {
              "Name": "ubuntu",
              "Project": "lab_week_11",
              "Role": "frontend-server"
            },
            "tags_all": {
              "Name": "ubuntu",
              "Project": "lab_week_11",
              "Role": "frontend-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-062fe873cc7f12a66"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.web",
            "aws_vpc.web",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.redis",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-093bd987f8e53e1f2",
            "arn": "arn:aws:ec2:us-west-2:767397692701:instance/i-0029097fdbf6c4ff4",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0029097fdbf6c4ff4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-4640",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08f88ddec53b33185",
            "private_dns": "ip-10-0-1-138.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.138",
            "public_dns": "ec2-52-42-87-227.us-west-2.compute.amazonaws.com",
            "public_ip": "52.42.87.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-034e38d892c563779",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005dbcb73792419e0",
            "tags": {
              "Name": "rocky",
              "Project": "lab_week_11",
              "Role": "redis-server"
            },
            "tags_all": {
              "Name": "rocky",
              "Project": "lab_week_11",
              "Role": "redis-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-062fe873cc7f12a66"
            ]
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.web",
            "aws_vpc.web"
          ]
        }
      ]
    }
  ]
}